# python-ui-color-palettes

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/ui_color_palettes/: __about__.py
tests/: __init__.py
